workspaces/kubernetes-native-dxp/k8s/remoteappa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remote-app-a
spec:
  selector:
    app: remote-app-a
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
