workspaces/kubernetes-native-dxp/k8s/remoteappa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-app-a-localhost
spec:
  ingressClassName: nginx
  rules:
  - host: remote-app-a.localdev.me
    http:
      paths:
      - backend:
          service:
            name: remote-app-a
            port:
              number: 80
        path: /
        pathType: Prefix
